# multi-token-standard-impl

./: .gitignore  Cargo.toml  NEP.md  README.md  build.sh  rustfmt.toml
examples/multi-token/: Cargo.toml  build.sh
examples/multi-token/mt/: Cargo.toml
examples/multi-token/mt/src/: lib.rs
examples/multi-token/test-token-receiver/: Cargo.toml
examples/multi-token/test-token-receiver/src/: lib.rs
examples/multi-token/tests/sim/: main.rs  test_core.rs  utils.rs
examples/semi-fungible-token/: Cargo.toml
examples/semi-fungible-token/sft/: Cargo.toml
examples/semi-fungible-token/sft/src/: lib.rs
examples/semi-fungible-token/test-token-receiver/: Cargo.toml
examples/semi-fungible-token/test-token-receiver/src/: lib.rs
examples/semi-fungible-token/tests/sim/: test_core.rs  utils.rs
meetings/: 2021-07-07-meeting-agenda.md  2021-07-07-meeting-notes.md  2021-08-03-meeting-agenda.md  2021-08-03-meeting-notes.md  2021-08-17-meeting-agenda.md  2021-08-17-meeting-notes.md  2021-09-13  2021-09-13-meeting-agenda.md
multi_token/: Cargo.toml
multi_token/src/: lib.rs  macros.rs  metadata.rs  mod.rs  token.rs  utils.rs
multi_token/src/approval/: approval_receiver.rs  mod.rs
multi_token/src/core/: core_impl.rs  minter.rs  mod.rs  receiver.rs  resolver.rs  storage_impl.rs
multi_token/src/storage_management/: mod.rs
semi_fungible_token/: Cargo.toml
semi_fungible_token/src/: lib.rs  macros.rs  metadata.rs  token.rs  utils.rs
semi_fungible_token/src/approval/: approval_receiver.rs
semi_fungible_token/src/core/: core_impl.rs  minter.rs  mod.rs  receiver.rs  resolver.rs  storage_impl.rs
