[package]
name = "semi-fungible-token-standard"
version = "0.0.0"
authors = ["Ships Gold zane@ships.gold"]
edition = "2018"

[dev-dependencies]
near-sdk = "3.1.0" 
near-sdk-sim = "3.2.0"
 

# remember to include a line for each contract
semi_fungible_token = { path = "./semi_fungible_token" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "semi_fungible_token",
]
