[package]
name = "multi-token-standards"
version = "0.0.0"
authors = ["Ships Gold zane@ships.gold"]
edition = "2018"

[dev-dependencies]
near-sdk = "4.0.0-pre.2" 
near-sdk-sim = "4.0.0-pre.2"
 

# remember to include a line for each contract
multi-token-standard = { path = "./multi_token" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "multi_token",
]

exclude = [
  "examples/multi-token",
]
