[package]
name = "semi-fungible-token-wrapper"
version = "0.0.1"
authors = ["zane@ships.gold"]
edition = "2018"

[dev-dependencies]
semi-fungible-token-standard = { path = "../../semi_fungible_token" }
near-sdk = "3.1.0" 
near-sdk-sim = "3.2.0"

# remember to include a line for each contract
semi-fungible-token = { path = "./sft" }
token-receiver = { path = "./test-token-receiver" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "sft",
  "test-token-receiver"
]

